Adiciona estrutura nav

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
   <link rel="stylesheet" href="./assets/styles.css">
 </head>
 <body>
-
+  <header>
+    <nav>
+      <div class="logo">
+        Wally
+      </div>
+      <ul class="headerMenu">
+        <li>Inicio</li>
+        <li>Perfil</li>
+        <li>Formacao</li>
+        <li>Projetos</li>
+        <li>Curriculo</li>
+      </ul>
+    </nav>
+  </header>
 
 
   <script src="./js/script.js"></script>
