--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 
   <link rel="stylesheet" href="./assets/styles/reset.css">
   <link rel="stylesheet" href="./assets/styles/normalize.css">
-  <link rel="stylesheet" href="./assets/styles.css">
+  <link rel="stylesheet" href="./assets//styles/style.css">
 </head>
 <body>
-  <header>
-    <nav>
+  <header class="header">
+    <nav class="container">
       <div class="logo">
-        Wally
+        <span>W</span>ally
       </div>
       <ul class="headerMenu">
-        <li>Inicio</li>
-        <li>Perfil</li>
-        <li>Formacao</li>
-        <li>Projetos</li>
-        <li>Curriculo</li>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Perfil</a></li>
+        <li><a href="#">Formacao</a></li>
+        <li><a href="#" class="projetosBotao btn">Projetos</a></li>
+        <li><a href="#" class="curriculoBotao btn">Curriculo</a></li>
       </ul>
     </nav>
   </header>
