--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
     </nav>
   </header>
 
+  <section class="intro">
+    <div class="container">
+      <div class="arte">
+        <span>Wallison</span>
+        <span>Franklin</span>
+        <span>Dev. Front End</span>
+        <img src="./assets/images/Frame 3formaHeader.svg" alt="balao">
+      </div>
+      <div class="arteUndraw">
+        <img src="./assets/images/arteUndraw.svg" alt="arteUndraw">
+      </div>
+    </div>
+    <div class="redesSociais">
+
+    </div>
+  </section>
+
 
   <script src="./js/script.js"></script>
 </body>
