Adiciona estilo no 'balao' da introdução

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <div class="container">
       <div class="arte">
         <span>Wallison</span>
-        <span>Franklin</span>
-        <span>Dev. Front End</span>
-        <img src="./assets/images/Frame 3formaHeader.svg" alt="balao">
+        <span class="sobrenome">Franklin</span>
+        <p>Dev. Front End</p>
+        <!-- <img src="./assets/images/Frame 3formaHeader.svg" alt="balao"> -->
       </div>
       <div class="arteUndraw">
-        <img src="./assets/images/arteUndraw.svg" alt="arteUndraw">
+        <!-- <img src="./assets/images/arteUndraw.svg" alt="arteUndraw"> -->
       </div>
     </div>
     <div class="redesSociais">
