Adiciona arte undraw

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </header>
 
   <section class="intro">
-    <div class="container">
+    <div class="container introContainer">
       <div class="arte">
         <span>Wallison</span>
         <span class="sobrenome">Franklin</span>
