Adiciona redes sociais. E mudança na estrutura html para que o container de redes sociais se comporte melhor

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
     </nav>
   </header>
 
+  <div class="redesSociais">
+    <ul class="redesLista">
+      <li><a href="https://api.whatsapp.com/send?phone=5516988127186&text=Ol%C3%A1!%20" target="_blank"><img src="./assets/images/icons/Whatsapp.svg" alt=""></a></li>
+      <li><a href="https://www.google.com/" target="_blank"><img src="./assets/images/icons/Email.svg" alt=""></a></li>
+      <li><a href="https://www.linkedin.com/in/wallison-franklin/" target="_blank"><img src="./assets/images/icons/Linkedin.svg" alt=""></a></li>
+      <li><a href="https://github.com/WallisonRP" target="_blank"><img src="./assets/images/icons/Github.svg" alt=""></a></li>
+    </ul>
+  </div>
+
   <section class="intro">
     <div class="container introContainer">
       <div class="arte">
@@ -42,9 +51,7 @@
         <!-- <img src="./assets/images/arteUndraw.svg" alt="arteUndraw"> -->
       </div>
     </div>
-    <div class="redesSociais">
 
-    </div>
   </section>
 
 
