Correção na margem das redes sociais

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     </nav>
   </header>
 
-  <div class="redesSociais">
+  <section class="redesSociais">
     <ul class="redesLista">
       <li><a href="https://api.whatsapp.com/send?phone=5516988127186&text=Ol%C3%A1!%20" target="_blank"><img src="./assets/images/icons/Whatsapp.svg" alt=""></a></li>
       <li><a href="https://www.google.com/" target="_blank"><img src="./assets/images/icons/Email.svg" alt=""></a></li>
       <li><a href="https://www.linkedin.com/in/wallison-franklin/" target="_blank"><img src="./assets/images/icons/Linkedin.svg" alt=""></a></li>
       <li><a href="https://github.com/WallisonRP" target="_blank"><img src="./assets/images/icons/Github.svg" alt=""></a></li>
     </ul>
-  </div>
+  </section>
 
   <section class="intro">
     <div class="container introContainer">
