Adiciona estrutura html do meu perfil pessoal. *Nota: O design do perfil passará por algumas modificações antes de ser implementado no código

--- a/index.html
+++ b/index.html
@@ -51,9 +51,28 @@
         <!-- <img src="./assets/images/arteUndraw.svg" alt="arteUndraw"> -->
       </div>
     </div>
-
   </section>
 
+  <section class="perfil">
+    <div class="container">
+      <div class="nome">
+        Wallison
+      </div>
+      <div class="foto">
+        <img src="" alt="fotoDePerfil">
+        <div class="dados">
+
+        </div>
+      </div>
+
+      <div class="sobre">
+
+        
+      </div>
+    </div>
+  </section>
+
+  
 
   <script src="./js/script.js"></script>
 </body>
