Adiciona estrutura html para seção de formação

--- a/index.html
+++ b/index.html
@@ -72,7 +72,31 @@
     </div>
   </section>
 
-  
+  <section class="formacao">
+    <div class="container">
+      <div class="tituloFormacao">
+        Formacao
+      </div>
+
+      <p>Estou cursando Análise e Desenvolvimento de Sistemas, tenho 22 anos e tenho muita curiosidade em saber como as coisas realmente funcionam.</p>
+
+      <div class="cursos">
+        <div>
+          <p class="curso">
+
+          </p>
+
+          <p class="instituicao">
+            
+          </p>
+        </div>
+      </div>
+
+      <div class="tecnologias">
+
+      </div>
+    </div>
+  </section>
 
   <script src="./js/script.js"></script>
 </body>
