Adiciona estutura html para tecnologias

--- a/index.html
+++ b/index.html
@@ -118,8 +118,14 @@
 
       
 
-      <div class="tecnologias">
-
+      <div class="grupo-tecnologias">
+        <h2>Tecnologias e habilidades</h2>
+        <div class="tecnologias card-component">
+          <div class="tecnologia">
+            <img src="./assets/images/icons/tecnologias/cplusplus.svg" alt="cplusplus">
+            <span>C / C++</span>
+          </div>
+        </div>
       </div>
     </div>
   </section>
