Adiciona estilos nas tecnologias

--- a/index.html
+++ b/index.html
@@ -125,6 +125,22 @@
             <img src="./assets/images/icons/tecnologias/cplusplus.svg" alt="cplusplus">
             <span>C / C++</span>
           </div>
+          <div class="tecnologia">
+            <img src="./assets/images/icons/tecnologias/html.svg" alt="cplusplus">
+            <span>HTML 5</span>
+          </div>
+          <div class="tecnologia">
+            <img src="./assets/images/icons/tecnologias/css.svg" alt="cplusplus">
+            <span>CSS 3</span>
+          </div>
+          <div class="tecnologia">
+            <img src="./assets/images/icons/tecnologias/js.svg" alt="cplusplus">
+            <span>JavaScript</span>
+          </div>
+          <div class="tecnologia">
+            <img src="./assets/images/icons/tecnologias/idiomas.svg" alt="cplusplus">
+            <span>Ingles básico</span>
+          </div>
         </div>
       </div>
     </div>
