Adiciona git as tecnologias

--- a/index.html
+++ b/index.html
@@ -126,19 +126,23 @@
             <span>C / C++</span>
           </div>
           <div class="tecnologia">
-            <img src="./assets/images/icons/tecnologias/html.svg" alt="cplusplus">
+            <img src="./assets/images/icons/tecnologias/html.svg" alt="html5">
             <span>HTML 5</span>
           </div>
           <div class="tecnologia">
-            <img src="./assets/images/icons/tecnologias/css.svg" alt="cplusplus">
+            <img src="./assets/images/icons/tecnologias/css.svg" alt="css3">
             <span>CSS 3</span>
           </div>
           <div class="tecnologia">
-            <img src="./assets/images/icons/tecnologias/js.svg" alt="cplusplus">
+            <img src="./assets/images/icons/tecnologias/js.svg" alt="JavaScript">
             <span>JavaScript</span>
           </div>
           <div class="tecnologia">
-            <img src="./assets/images/icons/tecnologias/idiomas.svg" alt="cplusplus">
+            <img src="./assets/images/icons/tecnologias/Git.svg" alt="git">
+            <span>Git</span>
+          </div>
+          <div class="tecnologia">
+            <img src="./assets/images/icons/tecnologias/idiomas.svg" alt="idiomas">
             <span>Ingles básico</span>
           </div>
         </div>
