Adiciona estrutura html para o footer

--- a/index.html
+++ b/index.html
@@ -150,6 +150,25 @@
     </div>
   </section>
 
+  <footer class="footer">
+    <div class="redes-footer">
+      <div><a href="https://api.whatsapp.com/send?phone=5516988127186&text=Ol%C3%A1!%20" target="_blank"><img src="./assets/images/icons/Whatsapp.svg" alt="">+55 16 98812-7186</a></div>
+      <div><a href="https://www.google.com/" target="_blank"><img src="./assets/images/icons/Email.svg" alt="">wallison0076@gmail.com</a></div>
+      <div><a href="https://www.linkedin.com/in/wallison-franklin/" target="_blank"><img src="./assets/images/icons/Linkedin.svg" alt="">/wallison-franklin</a></div>
+      <div><a href="https://github.com/WallisonRP" target="_blank"><img src="./assets/images/icons/Github.svg" alt="">/WallisonRP</a></div>
+
+    </div>
+
+    <div class="footer-descricao">
+      Busco estágio ou trabalho na área de TI ou desenvolvimento de software/web.
+
+      Estou disponível para novos projetos. Tem alguma ideia ou interesse em uma parceria? 
+      Entre em contato comigo e marcamos uma conversa 👋
+    </div>
+
+    <p>Wallison Franklin. Alguns direitos reservados.</p>
+  </footer>
+
   <script src="./js/script.js"></script>
 </body>
 </html>
