--- a/index.html
+++ b/index.html
@@ -152,11 +152,10 @@
 
   <footer class="footer">
     <div class="redes-footer">
-      <div><a href="https://api.whatsapp.com/send?phone=5516988127186&text=Ol%C3%A1!%20" target="_blank"><img src="./assets/images/icons/Whatsapp.svg" alt="">+55 16 98812-7186</a></div>
-      <div><a href="https://www.google.com/" target="_blank"><img src="./assets/images/icons/Email.svg" alt="">wallison0076@gmail.com</a></div>
-      <div><a href="https://www.linkedin.com/in/wallison-franklin/" target="_blank"><img src="./assets/images/icons/Linkedin.svg" alt="">/wallison-franklin</a></div>
-      <div><a href="https://github.com/WallisonRP" target="_blank"><img src="./assets/images/icons/Github.svg" alt="">/WallisonRP</a></div>
-
+      <div class="rede"><a href="https://api.whatsapp.com/send?phone=5516988127186&text=Ol%C3%A1!%20" target="_blank"><img src="./assets/images/icons/Whatsapp.svg" alt=""><span>+55 16 98812-7186</span></a></div>
+      <div class="rede"><a href="https://www.google.com/" target="_blank"><img src="./assets/images/icons/Email.svg" alt=""><span>wallison0076@gmail.com</span></a></div>
+      <div class="rede"><a href="https://www.linkedin.com/in/wallison-franklin/" target="_blank"><img src="./assets/images/icons/Linkedin.svg" alt=""><span>/wallison-franklin</span></a></div>
+      <div class="rede"><a href="https://github.com/WallisonRP" target="_blank"><img src="./assets/images/icons/Github.svg" alt=""><span>/WallisonRP</span></a></div>
     </div>
 
     <div class="footer-descricao">
