Adiona estilo no footer e algumas alterações na introdução

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 <body>
   <header class="header">
     <nav class="container">
-      <div class="logo">
-        <span>W</span>ally
-      </div>
+      <a href="#" class="logo"><span>W</span>ally</a>
       <ul class="headerMenu">
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Perfil</a></li>
@@ -34,14 +32,17 @@
   <section class="intro">
     <div class="container introContainer">
       <div class="arte">
-        <span>Wallison</span>
-        <span class="sobrenome">Franklin</span>
-        <p>Dev. Front End</p>
-        <!-- <img src="./assets/images/Frame 3formaHeader.svg" alt="balao"> -->
+        <img src="./assets/images/Frame 3formaHeader.svg" alt="balao">
+        <div class="intro-texto">
+          <span>Wallison</span>
+          <span class="sobrenome">Franklin</span>
+          <p>Dev. Front End</p>
+
+        </div>
       </div>
       <div class="arteUndraw">
-        <!-- <img src="./assets/images/arteUndraw.svg" alt="arteUndraw"> -->
-      </div>
+         <img class="teste" src="./assets/images/arteUndraw.svg" alt="arteUndraw"> 
+      </div> 
     </div>
     <section class="redesSociais">
       <ul class="redesLista">
@@ -151,21 +152,24 @@
   </section>
 
   <footer class="footer">
-    <div class="redes-footer">
-      <div class="rede"><a href="https://api.whatsapp.com/send?phone=5516988127186&text=Ol%C3%A1!%20" target="_blank"><img src="./assets/images/icons/Whatsapp.svg" alt=""><span>+55 16 98812-7186</span></a></div>
-      <div class="rede"><a href="https://www.google.com/" target="_blank"><img src="./assets/images/icons/Email.svg" alt=""><span>wallison0076@gmail.com</span></a></div>
-      <div class="rede"><a href="https://www.linkedin.com/in/wallison-franklin/" target="_blank"><img src="./assets/images/icons/Linkedin.svg" alt=""><span>/wallison-franklin</span></a></div>
-      <div class="rede"><a href="https://github.com/WallisonRP" target="_blank"><img src="./assets/images/icons/Github.svg" alt=""><span>/WallisonRP</span></a></div>
+    <div class="container container-footer">
+      <div class="redes-footer">
+        <div class="rede"><a href="https://api.whatsapp.com/send?phone=5516988127186&text=Ol%C3%A1!%20" target="_blank"><img src="./assets/images/icons/Whatsapp.svg" alt=""><span>+55 (16) 98812-7186</span></a></div>
+        <div class="rede"><a href="https://www.google.com/" target="_blank"><img src="./assets/images/icons/Email.svg" alt=""><span>wallison0076@gmail.com</span></a></div>
+        <div class="rede"><a href="https://www.linkedin.com/in/wallison-franklin/" target="_blank"><img src="./assets/images/icons/Linkedin.svg" alt=""><span>/wallison-franklin</span></a></div>
+        <div class="rede"><a href="https://github.com/WallisonRP" target="_blank"><img src="./assets/images/icons/Github.svg" alt=""><span>/WallisonRP</span></a></div>
+      </div>
+      <div class="linha"></div>
+      <div class="footer-descricao">
+        <p>Busco estágio ou trabalho na área de TI ou desenvolvimento de software/web.</p>
+        <p>Estou disponível para novos projetos. Tem alguma ideia ou interesse em uma parceria?
+        <br>Entre em contato comigo e marcamos uma conversa 👋</p>
+        
+      </div>
     </div>
-
-    <div class="footer-descricao">
-      Busco estágio ou trabalho na área de TI ou desenvolvimento de software/web.
-
-      Estou disponível para novos projetos. Tem alguma ideia ou interesse em uma parceria? 
-      Entre em contato comigo e marcamos uma conversa 👋
+    <div class="container copyright">
+      <p>Wallison Franklin. Alguns direitos reservados.</p>
     </div>
-
-    <p>Wallison Franklin. Alguns direitos reservados.</p>
   </footer>
 
   <script src="./js/script.js"></script>
