Reajustes na seção de introdução

--- a/index.html
+++ b/index.html
@@ -30,20 +30,6 @@
 
   
   <section class="intro">
-    <div class="container introContainer">
-      <div class="arte">
-        <img src="./assets/images/Frame 3formaHeader.svg" alt="balao">
-        <div class="intro-texto">
-          <span>Wallison</span>
-          <span class="sobrenome">Franklin</span>
-          <p>Dev. Front End</p>
-
-        </div>
-      </div>
-      <div class="arteUndraw">
-         <img class="teste" src="./assets/images/arteUndraw.svg" alt="arteUndraw"> 
-      </div> 
-    </div>
     <section class="redesSociais">
       <ul class="redesLista">
         <li><a href="https://api.whatsapp.com/send?phone=5516988127186&text=Ol%C3%A1!%20" target="_blank"><img src="./assets/images/icons/Whatsapp.svg" alt=""></a></li>
@@ -52,6 +38,20 @@
         <li><a href="https://github.com/WallisonRP" target="_blank"><img src="./assets/images/icons/Github.svg" alt=""></a></li>
       </ul>
     </section>
+    <div class="container introContainer">
+      <div class="arte">
+        <img src="./assets/images/Group 11.svg" alt="balao">
+        <!-- <div class="intro-texto">
+          <h2>Wallison</h2>
+          <h2 class="sobrenome">Franklin</h2>
+          <p>Dev. Front End</p>
+
+        </div> -->
+      </div>
+      <div class="arteUndraw">
+         <img class="teste" src="./assets/images/arteUndraw.svg" alt="arteUndraw"> 
+      </div> 
+    </div>
   </section>
 
   <section class="perfil">
