Adiciona grid na seção de formação

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
   </section>
 
   <section class="formacao">
-    <div class="container">
-      <div class="tituloFormacao"><span>F</span>ormacao</div>
-
+    <div class="container formacao-container">
+      
       <p>Estou cursando Análise e Desenvolvimento de Sistemas, tenho 22 anos e tenho muita curiosidade em saber como as coisas realmente funcionam.</p>
+      <div class="tituloFormacao"><span>F</span>ormacao</div>
       
       <div class="cursos">
 
